--- a/src/components/BookForm/BookForm.scss
+++ b/src/components/BookForm/BookForm.scss
@@ -19,5 +19,9 @@
     .form {
         display: flex;
         flex-direction: column;
+
+        .btn {
+            width: 80px;
+        }
     }
 }
