--- a/src/components/WishList/WishList.scss
+++ b/src/components/WishList/WishList.scss
@@ -2,13 +2,19 @@
     width: 100%;
     height: 100vh;
 
-    h1 {
-        font-family: 'Kdam Thmor Pro', sans-serif;
-        color: green;
-        font-weight: 700;
-        font-size: 34px;
-        letter-spacing: 3px;
-        padding: 20px 0 0;
+    .wl-title-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        h1 {
+            font-family: 'Kdam Thmor Pro', sans-serif;
+            color: green;
+            font-weight: 700;
+            font-size: 34px;
+            letter-spacing: 3px;
+            padding: 20px 0 0;
+        }
     }
 
     .wl-container {
