fully working edit function and small validations and changes, designed sort and filters in joint line (but hasnt finished yet)

--- a/src/components/JointLine/JointLine.scss
+++ b/src/components/JointLine/JointLine.scss
@@ -21,5 +21,11 @@
             font-size: 22px;
             letter-spacing: 1px;
         }
+
+        .jointline-sort-container {
+            width: 32%;
+            display: flex;
+            justify-content: space-between;
+        }
     }
 }
